Mr Moataz Comments

--- a/src/app/shared/components/about-us/about-us.component.html
+++ b/src/app/shared/components/about-us/about-us.component.html
@@ -23,7 +23,7 @@
                             {{activeLang === 'en' ? about.about_who_we_are_title_en : about.about_who_we_are_title_ar}}
                             <span> </span>
                         </h2>
-                        <p class="description" style="line-height: 1.9">
+                        <p class="description" style="line-height: 1.9; font-size: large;">
                             {{activeLang === 'en' ? about.about_who_we_are_description_en : about.about_who_we_are_description_ar}}
                         </p>
                     </div>
