--- a/src/app/shared/components/about-us/about-us.component.scss
+++ b/src/app/shared/components/about-us/about-us.component.scss
@@ -4,14 +4,14 @@
 padding: 0;
     .main-content {
         margin-top: -175px;
-        padding-bottom: 35px;
+        // padding-bottom: 35px;
         background-color: #fff;
         border-radius: 20px;
         box-shadow: 0px 3px 6px #59595919;
 
         .who-we-are {
             padding: 30px;
-            margin-bottom: 30px;
+            // margin-bottom: 30px;
 
             @media (max-width: 425px) {
                 margin-bottom: 0px;
@@ -21,6 +21,7 @@ padding: 0;
     }
     .section-row {
         margin-top: 50px;
+        align-items: center;
 
         @media (max-width: 425px) {
             margin-top: 35px;
@@ -96,6 +97,7 @@ padding: 0;
                line-height: 1.9;
                color:#A9A9A9;
                font-family: 'Rubik-medium';
+               font-size: larger;
            }
 
     }
