--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -73,6 +73,7 @@
                 @media (min-width: 768px) {
                     // font-size: calc(1.375rem + 0.5vw);
                     font-size: calc(1.25rem + .25vw);
+                    margin: 20px 0px;
                     // color: #fff;
                 }
                 @media (max-width: 768px) {
@@ -82,7 +83,7 @@
             }
 
             .stats{
-                display: flex;
+                display: none;
                 justify-content: space-between;
                 margin: 1% 0% 1% 0%;
             
@@ -123,6 +124,7 @@
                     border-bottom-right-radius: 0;
                 }
                 @media (min-width: 1024px) {
+                    margin-top: 27px;
                     margin-bottom: 190px;
                 }
                 @media (max-width:425px) {
@@ -262,7 +264,8 @@
         .image-sec {
             position: relative;
             padding: 0;
-            background: transparent url("../../assets/images/brian-babb-XbwHrt87mQ0.png") 0% 0% no-repeat padding-box;
+            background: transparent url("../../assets/images/main_photo.jpg") 0% 0% no-repeat padding-box;
+            background-size: contain;
             @media (max-width: 425px) {
                 background-size: contain;
                 min-height: 315px;
@@ -351,12 +354,13 @@
 
 						@media (max-width: 425px) {
 							display: block;
+                            margin-top: -45px;
 						}
 					}
 					
 					.compound{
                         display: flex;
-                        margin: 1%;
+                        margin: 15px;
                         min-width: fit-content;
 
                         @media (max-width: 425px) {
@@ -391,12 +395,12 @@
                 .actions{
                     height: fit-content;
                     background: #f7f7f7;
-                    margin: 1.5%;
+                    margin: 1%;
                     border-radius: 10px;
                     display: flex;
                     align-items: center;
                     flex-direction: row;
-                    padding: 3%;
+                    padding: 3% 1%;
                     justify-content: space-around;
                     
                     @media (max-width: 425px) {
@@ -442,7 +446,7 @@
                 }
 
                 .search_bar{
-                    margin: 0% 2%;
+                    margin: 0% 15px;
 
                     @media (max-width: 425px) {
                         margin: 0%;
@@ -533,9 +537,9 @@
                         }
                     }
                     &.priceRange {
-                        width: 22%;
+                        width: 18%;
 
-                        margin: 0% 2% 0% 1%; 
+                        margin: 0% 15px;
                         border: 1px solid #cbcaca;
                         border-radius: 10px;
                         box-shadow: 0 3px 6px #59595919;
@@ -557,7 +561,7 @@
                                 width: 95%;
                             }
                             @media (max-width: 425px) {
-                                width: 100%;
+                                // width: 100%;
                             }
                             width: 95%;
                             display: inline-flex;
@@ -694,7 +698,7 @@
                         @media (max-width: 768px) {
                             max-width: 100%;
                         }
-                        margin: 0% 1%;
+                        margin: 0% 15px;
                         @media (max-width: 425px) {
                             margin: 0%;
                             padding: 10px 0px;
@@ -706,7 +710,7 @@
                         // max-width: 11.99999%;
                         min-width: 15%!important;
     
-                        margin: 0% 1% 0% 2%;
+                        margin: 0% 15px;
                         @media (max-width: 425px) {
                             margin: 0%;
                             padding: 10px 0px
@@ -1618,39 +1622,51 @@
         background-color: #f7f7f7;
         padding: 50px 0;
 
-        // @media (max-width: 425px) {
-        //     padding: 0;
-        // }
+        .container{
+            display: flex;
 
-        .card {
-            text-align: center;
-            border: none;
-            border-radius: 20px 0px;
-            height: 420px;
-
-            .card-text {
-                color: #6a6a6a;
+            @media (max-width: 425px) {
+                display: block;
             }
 
-            .icons {
-                margin: 0 auto;
-                background: #f7f7f7;
-                display: inline-block;
-                padding: 35px;
-                border-radius: 50%;
-                margin-top: 20px;
-                margin-bottom: 35px;
-                img {
-                    width: 32px;
-                    max-height: 35px;
+            .card-container{
+                margin: 0% 2%;
+            }
+
+            .card {
+                text-align: center;
+                border: none;
+                border-radius: 20px 0px;
+                height: 420px;
+    
+                .card-text {
+                    margin-top: 15px;
+                    color: #6a6a6a;
+                    font-size: large;
+                }
+    
+                .icons {
+                    margin: 0 auto;
+                    background: #f7f7f7;
+                    display: inline-block;
+                    padding: 35px;
+                    border-radius: 50%;
+                    margin-top: 20px;
+                    margin-bottom: 35px;
+                    img {
+                        width: 32px;
+                        max-height: 35px;
+                    }
+                }
+    
+                .card-body {
+                    // padding-bottom: 70px;
+                    // padding-top: 30px;
                 }
             }
-
-            .card-body {
-                padding-bottom: 70px;
-                padding-top: 30px;
-            }
         }
+        
+        
     }
     .download-app {
         display: none;
