--- a/src/app/shared/components/my-units/my-units.component.html
+++ b/src/app/shared/components/my-units/my-units.component.html
@@ -223,15 +223,7 @@
                         <div class="col-12">
                             <div class="section">
                                 <p class="title">{{'myunits.List a new Property' | translate}}</p>
-                                <p class="description">
-                                    It is a long established fact that a reader will be distracted by the readable
-                                    content of a page when looking at its layout It is a long established fact that a
-                                    reader will be distracted by the readable content of a page when looking at its
-                                    layout It is a long established fact that a reader will be distracted by the
-                                    readable content of a page when looking at its layout It is a long established fact
-                                    that a reader will be distracted by the readable content of a page when looking at
-                                    its layout.
-                                </p>
+                                <p class="description">{{'myunits.description' | translate}}</p>
                                 <!-- <button class="btn button-success add-property" >{{'myunits.Add new
                                     Property' | translate}}</button> -->
                             </div>
