--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -56,14 +56,20 @@
                     <h3 style="margin-bottom: 0px;"> {{'home.Download app.title' | translate}} </h3>
                     
                     <div class="row left-sec justify-content-center">
-                        <div class="col downlaod" style="display: none;">
-                            <img (click)="navigateToAppStore()" src="../../../../assets/images/ios.png"
+                        <div class="col downlaod" style="margin: 5% 0%;">
+                            <div style="display: flex; justify-content: center;">
+                                <!-- (click)="navigateToAppStore()" -->
+                                <img src="../../../../assets/images/ios.png"
                                 alt="..." />
-                            <img (click)="navigateToGooglePlay()" src="../../../../assets/images/googleplay.png"
-                                alt="..." />
+                                <!-- (click)="navigateToGooglePlay()" -->
+                                <img src="../../../../assets/images/googleplay.png"
+                                    alt="..." />
+                            </div>
+
+                            <p style="color: #fd4c65; font-size: larger; font-weight: 700; margin: 5%;"> {{'footer.coming_soon' | translate}} </p>
                         </div>
 
-                        <div class="col downlaod">
+                        <div class="col downlaod" style="display: none;">
                             <img style="width: 50%;" src="../../../../assets/images/coming_soon.jpg" alt="..." />
                         </div>
 
