--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -132,8 +132,9 @@
                     @media (max-width: 425px) {
                         display: flex;
                         justify-content: center;
+                        flex-direction: column;
+                        align-items: center;
                     }
-
 
                     img {
                         width: 30%;
