--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -39,7 +39,7 @@
                 }
             }
             @media (max-width: 425px) {
-                margin-top: -278px;
+                margin-top: -215px;
                 text-align: center;
             }
             @media only screen and (min-width: 426px) and (max-width: 768px) {
@@ -268,7 +268,7 @@
             background-size: contain;
             @media (max-width: 425px) {
                 background-size: contain;
-                min-height: 315px;
+                min-height: 240px;
                 filter: brightness(0.6);
             }
             .overlay {
@@ -354,7 +354,7 @@
 
 						@media (max-width: 425px) {
 							display: block;
-                            margin-top: -45px;
+                            // margin-top: -45px;
 						}
 					}
 					
@@ -400,7 +400,7 @@
                     display: flex;
                     align-items: center;
                     flex-direction: row;
-                    padding: 3% 1%;
+                    padding: 2% 1%;
                     justify-content: space-around;
                     
                     @media (max-width: 425px) {
@@ -446,11 +446,23 @@
                 }
 
                 .search_bar{
+                    display: flex;
                     margin: 0% 15px;
+                    justify-content: space-between;
+                    align-items: center;
 
                     @media (max-width: 425px) {
                         margin: 0%;
                         padding-bottom: 10px
+                    }
+
+                    .search_button{
+                        margin-bottom: 15px; 
+                        border-radius: 10px;
+
+                        @media (max-width: 425px) {
+                            margin: 0px 15px; 
+                        }
                     }
                 }
 
@@ -1369,9 +1381,9 @@
     .recently-added {
         padding: 50px 0;
 
-        @media (max-width: 425px) {
-            padding: 0;
-        }
+        // @media (max-width: 425px) {
+        //     padding: 0;
+        // }
 
         background-color: #f7f7f7;
         .back-img {
@@ -1620,10 +1632,15 @@
     }
     .how-it-works {
         background-color: #f7f7f7;
-        padding: 50px 0;
+        padding: 100px 0px 50px 0px;
+
+        @media (max-width: 425px) {
+            padding: 0px;
+        }
 
         .container{
             display: flex;
+            margin: auto !important;
 
             @media (max-width: 425px) {
                 display: block;
@@ -1631,14 +1648,23 @@
 
             .card-container{
                 margin: 0% 2%;
+                width: 30%;
+
+                @media (max-width: 425px) {
+                    width: auto;
+                }
             }
 
             .card {
                 text-align: center;
                 border: none;
                 border-radius: 20px 0px;
-                height: 420px;
+                height: 400px;
     
+                @media (max-width: 425px) {
+                    height: fit-content;
+                }
+
                 .card-text {
                     margin-top: 15px;
                     color: #6a6a6a;
@@ -1653,10 +1679,18 @@
                     border-radius: 50%;
                     margin-top: 20px;
                     margin-bottom: 35px;
+                    height: 25%;
+
+                    @media (max-width: 425px) {
+                        margin: 20px auto 10px;
+                    }
+
                     img {
                         width: 32px;
                         max-height: 35px;
                     }
+
+                    
                 }
     
                 .card-body {
