--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,7 +101,7 @@ h2 {
 .section-head-center {
     text-align: center;
     // padding-top: 100px;
-    padding-bottom: 40px;
+    padding-bottom: 15px;
 
     @media (max-width: 425px) {
         padding-bottom: 0px;
@@ -859,10 +859,23 @@ nz-progress {
         width: 43%;
         position: absolute;
         top: 50px;
-        height: calc(100% - 150px);
+        height: calc(100% - 50px);
         background: #e1e6e5;
         border-top-right-radius: 60px;
         left: 0;
+        
+    }
+
+    .alaqaar-solution-text{
+        position: absolute;
+        left: 50%;
+        top: 60px;
+        width: 43%;
+
+        @media (max-width:425px){
+            position: initial;
+            width: 100%;
+        }
         
     }
 
@@ -912,6 +925,16 @@ nz-progress {
             right: 0;
             border-top-right-radius: 0px;
             border-top-left-radius: 60px;
+        }
+
+        .alaqaar-solution-text{
+            position: absolute;
+            right: 50%;
+
+            @media (max-width:425px){
+                position: initial;
+                width: 100%;
+            }
         }
     }
 }
@@ -1053,7 +1076,7 @@ a{
 
 // buy, rent, sell, rental components
 .home .first-sec .search-sec .ngSelect.priceRange{
-        min-width: 19% !important;
+        min-width: 17% !important;
 }
 
 .home .first-sec .search-sec .ngSelect.main{
@@ -1277,11 +1300,11 @@ span.dropdown-multiselect--active{
 }
 
 .ng-autocomplete {
-    width: 45% !important;
-
-    @media (max-width: 425px) {
-        width: 100% !important;
-    }
+    width: 100%!important;
+    
+    // @media (max-width: 425px) {
+    //     width: 100% !important;
+    // }
 }
 
 .ng-select .ng-select-container .ng-value-container .ng-input>input {
