--- a/src/app/shared/components/blog/blog.component.html
+++ b/src/app/shared/components/blog/blog.component.html
@@ -17,7 +17,7 @@
                     <div class="card" (click)="navigateToSingleBlog(item)">
                         <div style="position: relative;">
                             <span class="overlay" style="border-top-right-radius: 20px;"></span>
-                            <img src="{{BaseURL + item.image}}" class="card-img-top main-img "
+                            <img src="{{ item.image }}" class="card-img-top main-img "
                                 style="border-top-right-radius: 20px;" alt="...">
                         </div>
                         <div class="card-body">
