--- a/src/app/shared/components/single-blog/single-blog.component.scss
+++ b/src/app/shared/components/single-blog/single-blog.component.scss
@@ -1,16 +1,16 @@
 
 
 .single-blog {
-    margin: 60px auto;
-    background: #F7F7F7;
-    padding: 0;
+        background: #F7F7F7;
+        padding: 0;
+        max-width: inherit;
         .sub-head {
             border-radius: 20px;
             overflow: hidden;
         }
     
         .main-content {
-            margin-top: -175px;
+            margin-top: -245px;
             padding-bottom: 35px;
             background-color: #fff;
             border-radius: 20px;
