--- a/src/app/shared/components/set-priorites/set-priorites.component.html
+++ b/src/app/shared/components/set-priorites/set-priorites.component.html
@@ -20,7 +20,7 @@
                     <!-- filters  -->
                     <div class="col-xs-12 col-xl-12 filters-list order-1 order-xl-0">
                         <div class="mt-3 main">
-                            <div class="filters">
+                            <div class="filters" [ngStyle]="{'background': backgroundFilter, 'pointer-events' : pointerEventsFilter }">
 
                                 <!-- city -->
 
