--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -1401,8 +1401,8 @@
             width: 100px;
             // height: 40px;
             @media (max-width: 1440px) {
-                width: 45%;
-                height: 20%;
+                width: 30%;
+                height: 15%;
                 font-size: 12px;
                 top: 18px;
             }
@@ -1659,8 +1659,8 @@
                 text-align: center;
                 border: none;
                 border-radius: 20px 0px;
-                height: 400px;
-    
+                height: 100%;
+
                 @media (max-width: 425px) {
                     height: fit-content;
                 }
@@ -1884,13 +1884,23 @@
 
         @media (max-width: 425px) {
             padding: 30px 0px 0px 0px;
-
         }
 
-        .card-body{
-            flex: 1 1 auto;
-            padding: 1rem 1rem 0 1rem;
+        .card{
+            border-radius: 20px;
+            padding: 10px;
+            cursor: pointer;
+            height: 100%;
+
+            .card-body{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                padding: 1rem 1rem 0 1rem;
+            }
         }
+
+        
         .location {
             display: inline-block;
             font-size: 14px;
@@ -1901,6 +1911,10 @@
             img {
                 width: 8px;
                 margin-right: 3px;
+            }
+
+            @media (max-width: 425px) {
+                font-size: 12px;
             }
         }
         
@@ -1917,6 +1931,10 @@
             img {
                 width: 15px;
                 margin-right: 3px;
+            }
+
+            @media (max-width: 425px) {
+                font-size: 12px;
             }
         }
     
