--- a/src/app/shared/components/single-blog/single-blog.component.html
+++ b/src/app/shared/components/single-blog/single-blog.component.html
@@ -13,7 +13,7 @@
                     </p>
                     <h2> {{ activeLang === 'en' ? singleBlog['title_en'] : singleBlog['title_ar'] }}</h2>
                     <div class="row card-foot mt-5">
-                        <div class="col-xs-12 col-md-6">
+                        <div class="col-xs-12 col-md-6 date">
                             <div class="row">
                                 <div class="col">
                                     <div style="display: inline-block;padding-right: 25px;color: #99B2AF;">
@@ -28,7 +28,7 @@
                             </div>
 
                         </div>
-                        <div class="col-xs-12 col-md-6">
+                        <div class="col-xs-12 col-md-6 links">
                             <div class="social-links col-xl-8 col-12 float-end">
                                 <a (click)="shareToFacebook()"> <span class="fb"></span></a>
                                 <a (click)="shareToTwitter()"> <span class="tw"></span></a>
@@ -49,7 +49,7 @@
         <div class="row justify-content-center">
             <div class="col-xs-12 col-md-10 ">
                 <div class="row">
-                    <div class="col-12 desc">
+                    <div class="col-12 desc" style="display: none;">
                         <p style="color: #707070;">
                             {{ activeLang === 'en' ? singleBlog['title_en'] : singleBlog['title_ar'] }}
                         </p>
