--- a/src/app/shared/components/single-blog/single-blog.component.scss
+++ b/src/app/shared/components/single-blog/single-blog.component.scss
@@ -29,53 +29,83 @@
                     margin-right: 10px;
                 }
                }
-            }
-            .social-links {
-               a {
-                width: 40px;
-                height: 40px;
-                display: inline-block;
-                padding: 9px;
-                background-color: #F7F7F7;
-                margin: 0px 4%;
-                border-radius: 50%;
-                cursor: pointer;
+
+               .card-foot{
+                @media (max-width:425px) {
+                    margin: 0px !important;
+                }
+
+                .date{
+                    @media (max-width:425px) {
+                        margin: 25px 0px 25px 0px;
+                    }
+    
+                }
+
+                .links{
+                    @media (max-width:425px) {
+                        padding: 0px;
+                    }
+
+
+                    .social-links {
+
+                        @media (max-width:425px) {
+                            display: flex;
+                            justify-content: center;
+                        }
+
+                        a {
+                         width: 40px;
+                         height: 40px;
+                         display: inline-block;
+                         padding: 9px;
+                         background-color: #F7F7F7;
+                         margin: 0px 4%;
+                         border-radius: 50%;
+                         cursor: pointer;
+                        }
+                         span {
+                             display: inline-block;
+                             opacity: 1;
+                             width: 24px;
+                             height: 24px;
+                             padding: 0px 24px;
+                             &.fb {
+                                 background: transparent url('../../assets/images/facebook-fill.svg') 0% 0% no-repeat padding-box;
+                             }
+                             &.ig {
+                                 background: transparent url('../../assets/images/instagram-line.svg') 0% 0% no-repeat padding-box;
+                             }
+                             &.tw {
+                                 background: transparent url('../../assets/images/twitter-fill.svg') 0% 0% no-repeat padding-box;
+                             }
+                             &.ln {
+                                 background: transparent url('../../assets/images/linkedin-box-fill.svg') 0% 0% no-repeat padding-box;
+                             }
+                             &.cpy {
+                                 background: transparent url('../../../../assets/images/Path%20161.svg') 0% 0% no-repeat padding-box;
+                                 background-size: contain;
+                             }
+                 
+                         }
+                         .wh {
+                             color: #00AF5E;
+                             font-size: 24px;
+                             text-align: center;
+                             height: 25px;
+                             width: 25px;
+                             display: inline-block;
+                             vertical-align: super;
+                         }
+                         
+                     }
+                }
+
                }
-                span {
-                    display: inline-block;
-                    opacity: 1;
-                    width: 24px;
-                    height: 24px;
-                    padding: 0px 24px;
-                    &.fb {
-                        background: transparent url('../../assets/images/facebook-fill.svg') 0% 0% no-repeat padding-box;
-                    }
-                    &.ig {
-                        background: transparent url('../../assets/images/instagram-line.svg') 0% 0% no-repeat padding-box;
-                    }
-                    &.tw {
-                        background: transparent url('../../assets/images/twitter-fill.svg') 0% 0% no-repeat padding-box;
-                    }
-                    &.ln {
-                        background: transparent url('../../assets/images/linkedin-box-fill.svg') 0% 0% no-repeat padding-box;
-                    }
-                    &.cpy {
-                        background: transparent url('../../../../assets/images/Path%20161.svg') 0% 0% no-repeat padding-box;
-                        background-size: contain;
-                    }
-        
-                }
-                .wh {
-                    color: #00AF5E;
-                    font-size: 24px;
-                    text-align: center;
-                    height: 25px;
-                    width: 25px;
-                    display: inline-block;
-                    vertical-align: super;
-                }
-                
+
             }
+            
         }
 
         .desc {
@@ -106,12 +136,16 @@
             }
             img {
                 display: block;
-                width: 100%;
+                // width: 100%;
                 height: 400px;
                 border-radius: 20px;
                 margin: 20px auto;
                 @media (max-width:1024px) {
                     height: auto;
+                }
+
+                @media (max-width:425px) {
+                    width: -webkit-fill-available;
                 }
             }
             .description {
